seaqt/QtWidgets/gen_qmainwindow.h

class QMainWindow;
class QMetaObject;
class QSize;
class QWidget;
typedef struct QActionEvent QActionEvent;
typedef struct QChildEvent QChildEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEnterEvent QEnterEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMainWindow QMainWindow;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QMouseEvent QMouseEvent;
typedef struct QMoveEvent QMoveEvent;
typedef struct QObject QObject;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QResizeEvent QResizeEvent;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QTabletEvent QTabletEvent;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
bool QMainWindow_override_virtual_mouseDoubleClickEvent(void* self, intptr_t slot);
void QMainWindow_virtualbase_mouseDoubleClickEvent(void* self, QMouseEvent* event);
bool QMainWindow_override_virtual_mouseMoveEvent(void* self, intptr_t slot);
void QMainWindow_virtualbase_mouseMoveEvent(void* self, QMouseEvent* event);
bool QMainWindow_override_virtual_wheelEvent(void* self, intptr_t slot);
void QMainWindow_virtualbase_wheelEvent(void* self, QWheelEvent* event);
bool QMainWindow_override_virtual_keyPressEvent(void* self, intptr_t slot);
void QMainWindow_virtualbase_keyPressEvent(void* self, QKeyEvent* event);
bool QMainWindow_override_virtual_keyReleaseEvent(void* self, intptr_t slot);
void QMainWindow_virtualbase_keyReleaseEvent(void* self, QKeyEvent* event);
bool QMainWindow_override_virtual_focusInEvent(void* self, intptr_t slot);
void QMainWindow_virtualbase_focusInEvent(void* self, QFocusEvent* event);
bool QMainWindow_override_virtual_focusOutEvent(void* self, intptr_t slot);
void QMainWindow_virtualbase_focusOutEvent(void* self, QFocusEvent* event);
bool QMainWindow_override_virtual_enterEvent(void* self, intptr_t slot);
void QMainWindow_virtualbase_enterEvent(void* self, QEnterEvent* event);
bool QMainWindow_override_virtual_leaveEvent(void* self, intptr_t slot);
void QMainWindow_virtualbase_leaveEvent(void* self, QEvent* event);
bool QMainWindow_override_virtual_paintEvent(void* self, intptr_t slot);
void QMainWindow_virtualbase_paintEvent(void* self, QPaintEvent* event);
bool QMainWindow_override_virtual_moveEvent(void* self, intptr_t slot);
void QMainWindow_virtualbase_moveEvent(void* self, QMoveEvent* event);
bool QMainWindow_override_virtual_resizeEvent(void* self, intptr_t slot);
void QMainWindow_virtualbase_resizeEvent(void* self, QResizeEvent* event);
bool QMainWindow_override_virtual_closeEvent(void* self, intptr_t slot);
void QMainWindow_virtualbase_closeEvent(void* self, QCloseEvent* event);
bool QMainWindow_override_virtual_tabletEvent(void* self, intptr_t slot);
void QMainWindow_virtualbase_tabletEvent(void* self, QTabletEvent* event);
bool QMainWindow_override_virtual_actionEvent(void* self, intptr_t slot);
void QMainWindow_virtualbase_actionEvent(void* self, QActionEvent* event);
bool QMainWindow_override_virtual_dragEnterEvent(void* self, intptr_t slot);
void QMainWindow_virtualbase_dragEnterEvent(void* self, QDragEnterEvent* event);
bool QMainWindow_override_virtual_dragMoveEvent(void* self, intptr_t slot);
void QMainWindow_virtualbase_dragMoveEvent(void* self, QDragMoveEvent* event);
bool QMainWindow_override_virtual_dragLeaveEvent(void* self, intptr_t slot);
void QMainWindow_virtualbase_dragLeaveEvent(void* self, QDragLeaveEvent* event);
bool QMainWindow_override_virtual_dropEvent(void* self, intptr_t slot);
void QMainWindow_virtualbase_dropEvent(void* self, QDropEvent* event);
bool QMainWindow_override_virtual_showEvent(void* self, intptr_t slot);
void QMainWindow_virtualbase_showEvent(void* self, QShowEvent* event);
bool QMainWindow_override_virtual_hideEvent(void* self, intptr_t slot);
void QMainWindow_virtualbase_hideEvent(void* self, QHideEvent* event);
bool QMainWindow_override_virtual_nativeEvent(void* self, intptr_t slot);
bool QMainWindow_virtualbase_nativeEvent(void* self, struct miqt_string eventType, void* message, intptr_t* result);
bool QMainWindow_override_virtual_changeEvent(void* self, intptr_t slot);
void QMainWindow_virtualbase_changeEvent(void* self, QEvent* param1);
bool QMainWindow_override_virtual_metric(void* self, intptr_t slot);
int QMainWindow_virtualbase_metric(const void* self, int param1);
bool QMainWindow_override_virtual_initPainter(void* self, intptr_t slot);
void QMainWindow_virtualbase_initPainter(const void* self, QPainter* painter);
bool QMainWindow_override_virtual_redirected(void* self, intptr_t slot);
QPaintDevice* QMainWindow_virtualbase_redirected(const void* self, QPoint* offset);
bool QMainWindow_override_virtual_sharedPainter(void* self, intptr_t slot);
QPainter* QMainWindow_virtualbase_sharedPainter(const void* self);
bool QMainWindow_override_virtual_inputMethodEvent(void* self, intptr_t slot);
void QMainWindow_virtualbase_inputMethodEvent(void* self, QInputMethodEvent* param1);
bool QMainWindow_override_virtual_inputMethodQuery(void* self, intptr_t slot);
QVariant* QMainWindow_virtualbase_inputMethodQuery(const void* self, int param1);
bool QMainWindow_override_virtual_focusNextPrevChild(void* self, intptr_t slot);
bool QMainWindow_virtualbase_focusNextPrevChild(void* self, bool next);
bool QMainWindow_override_virtual_eventFilter(void* self, intptr_t slot);
bool QMainWindow_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QMainWindow_override_virtual_timerEvent(void* self, intptr_t slot);
void QMainWindow_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QMainWindow_override_virtual_childEvent(void* self, intptr_t slot);
void QMainWindow_virtualbase_childEvent(void* self, QChildEvent* event);
bool QMainWindow_override_virtual_customEvent(void* self, intptr_t slot);
void QMainWindow_virtualbase_customEvent(void* self, QEvent* event);
bool QMainWindow_override_virtual_connectNotify(void* self, intptr_t slot);
void QMainWindow_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QMainWindow_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QMainWindow_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QMainWindow_staticMetaObject();
void QMainWindow_delete(QMainWindow* self);