seaqt/QtWidgets/gen_qmainwindow.nim

proc fQMainWindow_virtualbase_mouseDoubleClickEvent(self: pointer, event: pointer): void{.importc: "QMainWindow_virtualbase_mouseDoubleClickEvent".}
proc fcQMainWindow_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_mouseDoubleClickEvent".}
proc fQMainWindow_virtualbase_mouseMoveEvent(self: pointer, event: pointer): void{.importc: "QMainWindow_virtualbase_mouseMoveEvent".}
proc fcQMainWindow_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_mouseMoveEvent".}
proc fQMainWindow_virtualbase_wheelEvent(self: pointer, event: pointer): void{.importc: "QMainWindow_virtualbase_wheelEvent".}
proc fcQMainWindow_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_wheelEvent".}
proc fQMainWindow_virtualbase_keyPressEvent(self: pointer, event: pointer): void{.importc: "QMainWindow_virtualbase_keyPressEvent".}
proc fcQMainWindow_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_keyPressEvent".}
proc fQMainWindow_virtualbase_keyReleaseEvent(self: pointer, event: pointer): void{.importc: "QMainWindow_virtualbase_keyReleaseEvent".}
proc fcQMainWindow_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_keyReleaseEvent".}
proc fQMainWindow_virtualbase_focusInEvent(self: pointer, event: pointer): void{.importc: "QMainWindow_virtualbase_focusInEvent".}
proc fcQMainWindow_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_focusInEvent".}
proc fQMainWindow_virtualbase_focusOutEvent(self: pointer, event: pointer): void{.importc: "QMainWindow_virtualbase_focusOutEvent".}
proc fcQMainWindow_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_focusOutEvent".}
proc fQMainWindow_virtualbase_enterEvent(self: pointer, event: pointer): void{.importc: "QMainWindow_virtualbase_enterEvent".}
proc fcQMainWindow_override_virtual_enterEvent(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_enterEvent".}
proc fQMainWindow_virtualbase_leaveEvent(self: pointer, event: pointer): void{.importc: "QMainWindow_virtualbase_leaveEvent".}
proc fcQMainWindow_override_virtual_leaveEvent(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_leaveEvent".}
proc fQMainWindow_virtualbase_paintEvent(self: pointer, event: pointer): void{.importc: "QMainWindow_virtualbase_paintEvent".}
proc fcQMainWindow_override_virtual_paintEvent(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_paintEvent".}
proc fQMainWindow_virtualbase_moveEvent(self: pointer, event: pointer): void{.importc: "QMainWindow_virtualbase_moveEvent".}
proc fcQMainWindow_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_moveEvent".}
proc fQMainWindow_virtualbase_resizeEvent(self: pointer, event: pointer): void{.importc: "QMainWindow_virtualbase_resizeEvent".}
proc fcQMainWindow_override_virtual_resizeEvent(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_resizeEvent".}
proc fQMainWindow_virtualbase_closeEvent(self: pointer, event: pointer): void{.importc: "QMainWindow_virtualbase_closeEvent".}
proc fcQMainWindow_override_virtual_closeEvent(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_closeEvent".}
proc fQMainWindow_virtualbase_tabletEvent(self: pointer, event: pointer): void{.importc: "QMainWindow_virtualbase_tabletEvent".}
proc fcQMainWindow_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_tabletEvent".}
proc fQMainWindow_virtualbase_actionEvent(self: pointer, event: pointer): void{.importc: "QMainWindow_virtualbase_actionEvent".}
proc fcQMainWindow_override_virtual_actionEvent(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_actionEvent".}
proc fQMainWindow_virtualbase_dragEnterEvent(self: pointer, event: pointer): void{.importc: "QMainWindow_virtualbase_dragEnterEvent".}
proc fcQMainWindow_override_virtual_dragEnterEvent(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_dragEnterEvent".}
proc fQMainWindow_virtualbase_dragMoveEvent(self: pointer, event: pointer): void{.importc: "QMainWindow_virtualbase_dragMoveEvent".}
proc fcQMainWindow_override_virtual_dragMoveEvent(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_dragMoveEvent".}
proc fQMainWindow_virtualbase_dragLeaveEvent(self: pointer, event: pointer): void{.importc: "QMainWindow_virtualbase_dragLeaveEvent".}
proc fcQMainWindow_override_virtual_dragLeaveEvent(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_dragLeaveEvent".}
proc fQMainWindow_virtualbase_dropEvent(self: pointer, event: pointer): void{.importc: "QMainWindow_virtualbase_dropEvent".}
proc fcQMainWindow_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_dropEvent".}
proc fQMainWindow_virtualbase_showEvent(self: pointer, event: pointer): void{.importc: "QMainWindow_virtualbase_showEvent".}
proc fcQMainWindow_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_showEvent".}
proc fQMainWindow_virtualbase_hideEvent(self: pointer, event: pointer): void{.importc: "QMainWindow_virtualbase_hideEvent".}
proc fcQMainWindow_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_hideEvent".}
proc fQMainWindow_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr uint): bool{.importc: "QMainWindow_virtualbase_nativeEvent".}
proc fcQMainWindow_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_nativeEvent".}
proc fQMainWindow_virtualbase_changeEvent(self: pointer, param1: pointer): void{.importc: "QMainWindow_virtualbase_changeEvent".}
proc fcQMainWindow_override_virtual_changeEvent(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_changeEvent".}
proc fQMainWindow_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QMainWindow_virtualbase_metric".}
proc fcQMainWindow_override_virtual_metric(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_metric".}
proc fQMainWindow_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QMainWindow_virtualbase_initPainter".}
proc fcQMainWindow_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_initPainter".}
proc fQMainWindow_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QMainWindow_virtualbase_redirected".}
proc fcQMainWindow_override_virtual_redirected(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_redirected".}
proc fQMainWindow_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QMainWindow_virtualbase_sharedPainter".}
proc fcQMainWindow_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_sharedPainter".}
proc fQMainWindow_virtualbase_inputMethodEvent(self: pointer, param1: pointer): void{.importc: "QMainWindow_virtualbase_inputMethodEvent".}
proc fcQMainWindow_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_inputMethodEvent".}
proc fQMainWindow_virtualbase_inputMethodQuery(self: pointer, param1: cint): pointer{.importc: "QMainWindow_virtualbase_inputMethodQuery".}
proc fcQMainWindow_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_inputMethodQuery".}
proc fQMainWindow_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool{.importc: "QMainWindow_virtualbase_focusNextPrevChild".}
proc fcQMainWindow_override_virtual_focusNextPrevChild(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_focusNextPrevChild".}
proc fQMainWindow_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QMainWindow_virtualbase_eventFilter".}
proc fcQMainWindow_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_eventFilter".}
proc fQMainWindow_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QMainWindow_virtualbase_timerEvent".}
proc fcQMainWindow_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_timerEvent".}
proc fQMainWindow_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QMainWindow_virtualbase_childEvent".}
proc fcQMainWindow_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_childEvent".}
proc fQMainWindow_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QMainWindow_virtualbase_customEvent".}
proc fcQMainWindow_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_customEvent".}
proc fQMainWindow_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QMainWindow_virtualbase_connectNotify".}
proc fcQMainWindow_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_connectNotify".}
proc fQMainWindow_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QMainWindow_virtualbase_disconnectNotify".}
proc fcQMainWindow_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_disconnectNotify".}
proc fcQMainWindow_staticMetaObject(): pointer {.importc: "QMainWindow_staticMetaObject".}
proc fcQMainWindow_delete(self: pointer) {.importc: "QMainWindow_delete".}


func init*(T: type gen_qmainwindow_types.QMainWindow, h: ptr cQMainWindow): gen_qmainwindow_types.QMainWindow =
  T(h: h)
proc create*(T: type gen_qmainwindow_types.QMainWindow, parent: gen_qwidget_types.QWidget): gen_qmainwindow_types.QMainWindow =
  gen_qmainwindow_types.QMainWindow.init(fcQMainWindow_new(parent.h))

proc create*(T: type gen_qmainwindow_types.QMainWindow, ): gen_qmainwindow_types.QMainWindow =
  gen_qmainwindow_types.QMainWindow.init(fcQMainWindow_new2())

proc create*(T: type gen_qmainwindow_types.QMainWindow, parent: gen_qwidget_types.QWidget, flags: cint): gen_qmainwindow_types.QMainWindow =
  gen_qmainwindow_types.QMainWindow.init(fcQMainWindow_new3(parent.h, cint(flags)))

proc metaObject*(self: gen_qmainwindow_types.QMainWindow, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQMainWindow_metaObject(self.h))

proc metacast*(self: gen_qmainwindow_types.QMainWindow, param1: cstring): pointer =
  fcQMainWindow_metacast(self.h, param1)

proc metacall*(self: gen_qmainwindow_types.QMainWindow, param1: cint, param2: cint, param3: pointer): cint =
  fcQMainWindow_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type gen_qmainwindow_types.QMainWindow, s: cstring): string =
  let v_ms = fcQMainWindow_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc iconSize*(self: gen_qmainwindow_types.QMainWindow, ): gen_qsize_types.QSize =
  gen_qsize_types.QSize(h: fcQMainWindow_iconSize(self.h))

proc setIconSize*(self: gen_qmainwindow_types.QMainWindow, iconSize: gen_qsize_types.QSize): void =
  fcQMainWindow_setIconSize(self.h, iconSize.h)

proc toolButtonStyle*(self: gen_qmainwindow_types.QMainWindow, ): cint =
  cint(fcQMainWindow_toolButtonStyle(self.h))

proc setToolButtonStyle*(self: gen_qmainwindow_types.QMainWindow, toolButtonStyle: cint): void =
  fcQMainWindow_setToolButtonStyle(self.h, cint(toolButtonStyle))

proc isAnimated*(self: gen_qmainwindow_types.QMainWindow, ): bool =
  fcQMainWindow_isAnimated(self.h)

proc isDockNestingEnabled*(self: gen_qmainwindow_types.QMainWindow, ): bool =
  fcQMainWindow_isDockNestingEnabled(self.h)
